# tinysonic

./: Cargo.toml  Readme.org  bindings.json  build.rs  qml.qrc
src/: albums.rs  audio.rs  comms.rs  library.rs  main.cpp  main.rs  output.rs  player.rs  plm.rs  qt_utils.rs  rodio_utils.rs
src/ui_impl/: albums.rs  mod.rs  player.rs  simple.rs
src/widgets/: mod.rs  net_image.rs
subsonic-client/: Cargo.toml  Readme.org
subsonic-client/src/: auth.rs  lib.rs
subsonic-client/test-data/navidrome/: getAlbum.json  getArtist.json  getArtistInfo.json  getArtistInfo2.json  getArtists.json  getGenres.json  getIndexes.json  getLicense.json  getMusicDirectory.json  getMusicFolder.json  ping.json
ui/: AlbumCover.qml  AlbumCoverGridItem.qml  PlayingBar.qml  component_test.qml  main.qml
