[package]
name = "subsonic-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
thiserror = "1.0"
rand = "0.8"
md5 = "0.7"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
url = "2.2"
bytes = "1.1.0"

[dev-dependencies]
tracing-subscriber = "0.2"
tokio = { version = "1", features = ["macros"] }